@@ -3,7 +3,13 @@ Section: libs
 Priority: optional
 Maintainer: Sebastien Bacher <seb128@debian.org>
 Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Loic Minier <lool@dooz.org>
-Build-Depends: debhelper (>> 5.0.22), pkg-config (>= 0.14.0), gettext, autotools-dev, gnome-pkg-tools (>= 0.11), quilt, dpkg-dev (>= 1.13.19)
+Build-Depends: debhelper (>> 5.0.22),
+               pkg-config (>= 0.14.0),
+               gettext,
+               autotools-dev,
+               gnome-pkg-tools (>= 0.11),
+               quilt,
+               dpkg-dev (>= 1.13.19)
 Standards-Version: 3.7.2
 
 Package: libglib2.0-0
@@ -38,7 +44,8 @@ Description: The GLib library of C routines - minimal runtime
 Package: libglib2.0-dev
 Section: libdevel
 Architecture: any
-Depends: libglib2.0-0 (= ${binary:Version}), pkg-config (>= 0.14.0)
+Depends: libglib2.0-0 (= ${binary:Version}),
+         pkg-config (>= 0.14.0)
 Suggests: libglib2.0-doc
 Replaces: libglib1.3-dev
 Conflicts: libglib1.3-dev
@@ -74,7 +81,8 @@ Package: libglib2.0-data
 Section: misc
 Architecture: all
 Depends: libglib2.0-0 (>= ${source:Version})
-Replaces: libglib1.3, libglib1.3-data
+Replaces: libglib1.3,
+          libglib1.3-data
 Conflicts: libglib1.3-data
 Description: Common files for GLib library
  GLib is a library containing many useful C routines for things such
